Fixed overflowing thumbnail

--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -194,7 +194,6 @@ code br {
 }
 
 .multipleUploads .uploadCell:not(.expandedCell) {
-  max-width: 150px;
   float: left;
 }
 
